change quarto publish

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,6 +17,13 @@ jobs:
             - name: Set up Quarto
               uses: quarto-dev/quarto-actions/setup@v2
 
+            - name: Mamba and samurai env installation
+              uses: mamba-org/setup-micromamba@v1
+              with:
+                  environment-file: environment.yml
+                  environment-name: env
+                  cache-environment: true
+
             - name: Render and Publish
               uses: quarto-dev/quarto-actions/publish@v2
               with:
