--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,12 +17,13 @@ jobs:
             - name: Set up Quarto
               uses: quarto-dev/quarto-actions/setup@v2
 
-            - name: Mamba and samurai env installation
-              uses: mamba-org/setup-micromamba@v1
+            - name: Install Python and Dependencies
+              uses: actions/setup-python@v5
               with:
-                  environment-file: environment.yml
-                  environment-name: env
-                  cache-environment: true
+                python-version: '3.10'
+                cache: 'pip'
+            - run: pip install jupyter
+            - run: pip install numpy 
 
             - name: Render and Publish
               uses: quarto-dev/quarto-actions/publish@v2
