--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -20,10 +20,10 @@ jobs:
             - name: Install Python and Dependencies
               uses: actions/setup-python@v5
               with:
-                python-version: '3.10'
+                python-version: '3.12'
                 cache: 'pip'
             - run: pip install jupyter
-            - run: pip install numpy 
+            - run: pip install -r requirements.txt 
 
             - name: Render and Publish
               uses: quarto-dev/quarto-actions/publish@v2
